testing an issue with overflow on loading and rules screen

--- a/assets/css/mainMenu.css
+++ b/assets/css/mainMenu.css
@@ -17,8 +17,8 @@
 }
 
 .hades-intro, .rules-img{
-  max-width: 700px;
-  width: 90%;
+  max-width: 600px;
+  width: 70%;
   animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
@@ -42,7 +42,7 @@
   font-family: Arial;
   font-size: 20px;
   line-height: 2rem;
-  text-align: center;
+  text-align: start;
   max-width: 400px;
   width: 90%;
   word-break: break-word;
@@ -55,19 +55,11 @@
   animation-timing-function: ease-in-out;
 }
 
-.bubble:after {
-  content: "";
-  position: absolute;
-  display: block;
-  width: 0;
-  z-index: 5;
-  border-style: solid;
-  border-color: white transparent;
-  border-width: 20px 20px 0;
-  bottom: -20px;
-  left: 7%;
-  margin-left: -20px;
+#rules-screen .bubble{
+  overflow-y: scroll;
+  max-height: 350px;
 }
+
 
 .menu-buttons > button {
   display: flex;
